--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "clsx": "^2.1.1",
     "groq-sdk": "^0.5.0",
     "lucide-react": "^0.412.0",
-    "next": "14.2.5",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
